--- a/meteor/tests.html
+++ b/meteor/tests.html
@@ -1,9 +1,9 @@
 <template name="basicUse">
-    {{jsonPath this "../b"}}
+    {{jsonPath this "../book[0]/author"}}
 </template>
 
 <template name="blockUse">
-    {{#if jsonPath this "../aDefined"}}
-        {{jsonPath this "../b"}}
-    {{/if}}
+    {{#each jsonPath this "../book[*]"}}
+        {{author}}
+    {{/each}}
 </template>
